--- a/Weather-API.csproj
+++ b/Weather-API.csproj
@@ -23,4 +23,8 @@
     <ContainerPort Include="8081" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Data.Tables" Version="12.9.1" />
+  </ItemGroup>
+
 </Project>
