--- a/Weather-API.csproj
+++ b/Weather-API.csproj
@@ -25,6 +25,8 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.9.1" />
+    <PackageReference Include="Azure.Identity" Version="1.13.1" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
