--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Endpoints": {
+        "KeyVault": "https://weather-vault.vault.azure.net",
+        "AppConfiguration": "https://weather-configuration.azconfig.io"
     }
-  },
-  "AllowedHosts": "*"
 }
